# Blast-Program

./: .gitignore  README.md  build.ps1  main.py  pyproject.toml
assets/workbooks/: Diff Gassing Titan XL Blends, 02 October 2012, Final.xlsm
src/blast_program/: app.py
src/blast_program/ui/: __init__.py  empirical_screen.py  gassing_screen.py  main_window.py  screens.py
