[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blast-program"
version = "0.1.0"
description = "Desktop toolkit scaffold for blasting calculations and quick references."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6==6.9.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
